feat: stream local media files
